src/objects/Family_Member__c.object
<CustomObject>
    <description>This object represents a family member for a person</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Holding field</description>
        <inlineHelpText>Holding field</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>The family member&apos;s age.</description>
        <inlineHelpText>Family member&apos;s age.</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The family members Address: City</description>
        <inlineHelpText>The family members Address: City</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The person to which this family member is related</description>
        <inlineHelpText>The person to which this family member is related</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Families</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>The family member&apos;s Address: Country</description>
        <inlineHelpText>The family member&apos;s Address: Country</inlineHelpText>
        <label>CountryCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The family member&apos;s Email</description>
        <inlineHelpText>The family member&apos;s Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>The family member&apos;s First Name</description>
        <inlineHelpText>The family member&apos;s First Name</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Graduation_Year__c</fullName>
        <description>The family member&apos;s High School Graduation year</description>
        <inlineHelpText>The family member&apos;s High School Graduation year</inlineHelpText>
        <label>High School Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>Required EASY field</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>The family member&apos;s home phone</description>
        <inlineHelpText>The family member&apos;s home phone</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_Address_Different_Than_Contact__c</fullName>
        <label>Is Address Different Than Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The family member&apos;s Last Name</description>
        <inlineHelpText>The family member&apos;s Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>The family member&apos;s mobile phone</description>
        <inlineHelpText>The family member&apos;s mobile phone</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>The family member&apos;s occupation.</description>
        <inlineHelpText>Family member&apos;s occupation.</inlineHelpText>
        <label>Occupation</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>The family member&apos;s Address: Postal Code/Zip</description>
        <inlineHelpText>The family member&apos;s Address: Postal Code/Zip</inlineHelpText>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies a previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person to which the this person is related to</description>
        <inlineHelpText>The person to which the this person is related to</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Families1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>Required EASY field</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>Related Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>The family member&apos;s title or salutation</description>
        <inlineHelpText>The family member&apos;s title or salutation</inlineHelpText>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Salutations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>The family member&apos;s Address: State</description>
        <inlineHelpText>The family member&apos;s Address: State</inlineHelpText>
        <label>State/Province Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>The family member&apos;s address: street</description>
        <inlineHelpText>The family member&apos;s address: street</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The relationship type between the person and the family member</description>
        <inlineHelpText>The relationship type between the person and the family member</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Stepbrother</fullName>
                </value>
                <value>
                    <fullName>Stepfather</fullName>
                </value>
                <value>
                    <fullName>Stepmother</fullName>
                </value>
                <value>
                    <fullName>Stepsister</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Required EASY field</description>
        <inlineHelpText>Required EASY field</inlineHelpText>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>The family member&apos;s work phone</description>
        <inlineHelpText>The family member&apos;s work phone</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Family Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Family Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>